--- a/css/css.css
+++ b/css/css.css
@@ -1,3 +1,8 @@
+@font-face {
+	font-family: 'Neue';
+	src: url('../files/fonts/THE_CHOSEN_ONE_MEDIUM.otf') format('opentype');
+}
+
 *,
 *::before,
 *::after {
@@ -7,26 +12,41 @@
 * {
 	margin: 0;
 	padding: 0;
+	text-decoration: none;
+	color: #9F4298;
+	font-family: 'Neue', sans-serif;
+}
+
+body {
+	background: #E6E7E8;
 }
 
 .nav_item,
-.logo,
 .call_to_action {
 	margin: 1rem;
+	padding: 1rem;
+}
+
+.logo {
+	width: 12rem;
+	height: auto;
+}
+
+.container {
 	padding: 2rem;
 }
 
 .header {
 	position: sticky;
 	font-size: 1.3rem;
-	top: 0.5rem;
+	top: 0rem;
 	display: flex;
-	width: 100%;
 	height: 6rem;
-	background-color: pink;
+	background: #E6E7E8;
 	justify-content: space-around;
 	align-items: center;
-	margin-top: 2rem;
+	margin-bottom: 5rem;
+	box-shadow: 0rem 0.01rem 1rem #D1AFD3;
 }
 
 .navigation {
@@ -36,38 +56,78 @@
 }
 
 .call_to_action {
-	background-color: red;
-	border-radius: 1rem;
+	text-align: center;
+	font-weight: bold;
+	background: #332677;
+	border: 0.2rem solid #332677;
+	border-radius: 0.4rem 1.3rem 0.4rem 0.4rem;
+	transition: all 0.2s;
+	color: #E6E7E8;
+}
+
+.call_to_action:hover {
+	transform: scale(0.9);
+	background: #E6E7E8;
+	box-shadow: 0rem 0rem 0.5rem #332677;
+	color: #332677;
 }
 
 .footer {
+	display: flex;
 	font-size: 3rem;
-	height: 4rem;
-	width: 100%;
 	position: fixed;
 	text-align: center;
+	left: 0rem;
+	right: 0rem;
 	bottom: 0rem;
-	background-color: blue;
+	background-color: #D1AFD3;
+	justify-content: center;
+	border-top-right-radius: 4rem;
+	border-top-left-radius: 4rem;
+}
+
+.team_box_1 {
+	display: flex;
+	padding: 4rem;
+}
+
+.team {
+	width: 35rem;
+	height: auto;
 }
 
 .bigbox_1 {
 	display: flex;
 	justify-content: space-around;
-	align-items: center;
-	background-color: violet;
-	height: 30rem;
-	margin: 5rem;
-	border-radius: 2rem;
+	background: #E6E7E8;
+	height: 40rem;
+	box-shadow: 0rem 0rem 0.5rem #D1AFD3;
+	border-radius: 0.5rem;
+	margin-left: 10rem;
+	margin-right: 10rem;
 }
 
 .bigbox_1_div {
-	background-color: yellow;
-	padding: 10rem;	
-	border-radius: 2rem;
+	background: #D1AFD3;
+	border-radius: 1rem;
 }
 
-.bigbox_1 .one {
+.item_one {
+	background: #E6E7E8;
+
+}
+
+.title {
+	font-size: 3rem;
+}
+
+.paragraph {
+	font-size: rem;
+}
+
+.title_box_1 {
 	display: flex;
+	padding: 2rem;
 	flex-direction: column;
-	justify-content: space-around;
+	justify-content: space-between;
 }
