--- a/style/style.css
+++ b/style/style.css
@@ -51,3 +51,16 @@ svg
 	max-width: 100%;
 	user-select: none;
 }
+
+body::-webkit-scrollbar {
+  width: var(--size-xs);
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+}
