--- a/style/utils.css
+++ b/style/utils.css
@@ -111,7 +111,7 @@
 	margin-right: auto;
 	padding-left: 0.5rem;
 	padding-right: 0.5rem;
-	border: 1px solid var(--color-red);
+	/* border: 1px solid var(--color-red); */
 }
 
 .section
