--- a/style/utils.css
+++ b/style/utils.css
@@ -113,6 +113,17 @@
 	/* border: 1px solid var(--color-red); */
 }
 
+.on_scroll
+{
+	opacity: 0;
+	transition: all 1s;
+}
+
+.show
+{
+	opacity: 1;
+}
+
 .section
 {
 	margin-top: 5rem;
