--- a/style/components/footer.css
+++ b/style/components/footer.css
@@ -9,6 +9,10 @@
 	text-align: center;
 	gap: var(--size-5xl);
 	border-top: 1px solid var(--color-red);
+	position: relative;
+	left: 0;
+	right: 0;
+	bottom: 0rem;
 }
 
 .footer__title
