--- a/style/components/mobile-nav.css
+++ b/style/components/mobile-nav.css
@@ -5,7 +5,7 @@
 	top: 0;
 	left: 0;
 	z-index: 999;
-	height: 45%;
+	height: 30rem;
 	width: 100%;
 	background-color: var(--color-dark);
 	display: none;
