--- a/style/components/contact_page.css
+++ b/style/components/contact_page.css
@@ -167,9 +167,10 @@
 	color: var(--color-light);
 	border-radius: 0.5rem;
 	padding: 1rem;
-	padding-bottom: 4rem;
+	padding-bottom: 5rem;
 	background-color: var(--color-dark);
 	border: 1px solid var(--color-dark);
+	resize: none;
 }
 
 /* @media (min-width: 320px) */
