--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@
 @import './components/faq.css';
 @import './components/contact-section.css';
 @import './components/contact_page.css';
+@import './components/about_us.css';
 @import './utils.css';
 
 :root
