--- a/style/components/about_us.css
+++ b/style/components/about_us.css
@@ -122,10 +122,16 @@
 .abt_us4
 {
 	margin-top: 1.5rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 .abt4__s1
 {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 	text-align: center;
 	margin-bottom: 1rem;
 	margin-top: 1rem;
@@ -240,6 +246,43 @@
 	{
 		width: 30rem;
 		height: auto;
+	}
+	.ab2c__title
+	{
+		font-size: 2rem;
+	}
+
+	.abt3__s1
+	{
+		flex-direction: row;
+		text-align: left;
+		padding-left: 2rem;
+		padding-right: 2rem;
+	}
+
+	.abt3__s1__left__buttom
+	{
+		font-size: 2.3rem;
+		width: 33rem;
+	}
+
+	.abt3__s2
+	{
+		padding-left: 2rem;
+		padding-right: 2rem;
+		padding-bottom: 2rem;
+		flex-direction: row;
+	}
+
+	.abt4__s2__bigcard
+	{
+		display: flex;
+		align-items: center;
+	}
+
+	.abt4__s1__content
+	{
+		width: 45rem;
 	}
 }
 
