--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@
 @import './components/contact-section.css';
 @import './components/contact_page.css';
 @import './components/about_us.css';
+@import './components/services.css';
 @import './utils.css';
 
 :root
