portfolio page added

--- a/style/components/mobile-nav.css
+++ b/style/components/mobile-nav.css
@@ -1,7 +1,8 @@
 .mobile-nav
 {
 	position: fixed;
-	border: 1px solid var(--color-blue);
+	/* border: 1px solid var(--color-blue); */
+	border-radius: 0.3rem;
 	top: 0;
 	left: 0;
 	z-index: 999;
