--- a/style/style.css
+++ b/style/style.css
@@ -12,6 +12,7 @@
 @import './components/contact_page.css';
 @import './components/about_us.css';
 @import './components/services.css';
+@import './components/portfolio.css';
 @import './utils.css';
 
 :root
