--- a/style/components/header.css
+++ b/style/components/header.css
@@ -11,7 +11,10 @@
 	z-index: 9999;
 	position: fixed;
 	width: 100%;
-	background-color: var(--color-dark);
+	/* background-color: var(--color-dark); */
+	background-color: var(--header-bg);
+	-webkit-backdrop-filter: blur(5px);
+	backdrop-filter: blur(5px);
 }
 
 .header__menu
