--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@
 
 :root
 {
+	--header-bg: rgba(30, 30, 46, 0.97);
 	--color-light: #cdd6f4;
 	--color-blue: #74c7ec;
 	--color-red: #f38ba8;
@@ -85,6 +86,7 @@ body::-webkit-scrollbar-thumb {
 
 .light-mode
 {
+	--header-bg: rgba(239, 241, 245, 0.9);
 	--color-light: #4c4f69;
 	--color-blue: #1e66f5;
 	--color-red: #d20f39;
