--- a/style/components/portfolio.css
+++ b/style/components/portfolio.css
@@ -37,7 +37,7 @@
 	height: auto;
 	border-radius: 0.3rem;
 	display: block;
-	transition: 0.3s ease-in-out ;
+	transition: transform 0.3s ease-in-out ;
 }
 
 .pf_imgbox:hover img 
